# auto_app

./: .gitignore  README.md  config.yaml  dasam_gp_gradio_ros_tr_action_auto.py  dasam_gp_gradio_ros_tr_action_auto_fresh_tf.py
FlowPoseDocker/: Dockerfile  Dockerfile.jetson  build.sh  config.yaml  requirements.txt  run.sh  update_realsense_intrinsics.py
FlowPoseDocker/RequestFormat/: input.schema.json  output.schema.json
FlowPoseDocker/Server/: banner_logger.py
MarvinDocker/: Dockerfile  build.sh  requirements.txt  run.sh
MarvinDocker/robotaction/: Pipeline.MD  README.md  __init__.py  common.py  execution.py  robot_action.py  state_machine.py  tf_helpers.py  watchers.py  zmq2ros.py
MarvinDocker/ros2_ws/src/Marvin-description/: .gitignore  CMakeLists.txt  gen_urdf.sh  gen_urdf_mobile.sh  package.xml  readme.md
MarvinDocker/ros2_ws/src/Marvin-description/launch/: description_only_m3.launch.py  description_only_m6.launch.py  display_m6_cam.launch.py  displaym3.launch.py  displaym6.launch.py  displaym6dm.launch.py  displaym6m.launch.py  urdf.rviz
MarvinDocker/ros2_ws/src/Marvin-description/meshes/base/: base_link.STL  support_link.STL
MarvinDocker/ros2_ws/src/Marvin-description/urdf/: M6-S-L-CCS-696-V4.urdf.xacro  M6-S-R-CCS-696-V4.urdf.xacro  marvin_CCS_cam_m6.urdf.xacro  marvin_CCS_m3.urdf.xacro  marvin_CCS_m6.urdf.xacro  marvin_CCS_m6_mobile.urdf.xacro  mobile_base.urdf.xacro  stand_cam.urdf.xacro  stand_flat.urdf.xacro  stand_v3.urf.xacro
MarvinDocker/ros2_ws/src/marvin_ros2_control/: CMakeLists.txt  install_van.sh  package.xml  readme.md
MarvinDocker/ros2_ws/src/marvin_ros2_control/.git.bak.20260416_104155/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index  packed-refs
MarvinDocker/ros2_ws/src/marvin_ros2_control/.git.bak.20260416_104155/logs/: HEAD
MarvinDocker/ros2_ws/src/marvin_ros2_control/.git.bak.20260416_104155/logs/refs/remotes/origin/: HEAD  control_only  tool-com-forward
MarvinDocker/ros2_ws/src/marvin_ros2_control/.git.bak.20260416_104155/refs/heads/: tool-com-forward
MarvinDocker/ros2_ws/src/marvin_ros2_control/.git.bak.20260416_104155/refs/remotes/origin/: HEAD  control_only
MarvinDocker/ros2_ws/src/marvin_ros2_control/config/: ccs_m3.MvKDCfg  robot_param_m3.yaml  robot_param_m6.yaml
MarvinDocker/ros2_ws/src/marvin_ros2_control/include/marvin_ros_control/: marvin_robot.h
MarvinDocker/ros2_ws/src/marvin_ros2_control/launch/: bringup_control_m3.launch.py  bringup_control_m6.launch.py  jog.launch.py
MarvinDocker/ros2_ws/src/marvin_ros2_control/src/: marvin_robot.cpp  marvin_robot_node.cpp
MarvinDocker/ros2_ws/src/marvin_ros2_control/src/kinematicsSDK/: FXDG.h  FXDT.h  FXFLT.c  FXFLT.h  FXMath.c  FXMath.h  FXMatrix.c  FXRobotDef.h  FXSpln.cpp  FxRobot.c  PointSet.cpp  PointSet.h  makefile  makefile_dll
MarvinDocker/ros2_ws/src/marvin_teleop/: CMakeLists.txt  NULLSPACE_IK_CHANGES.md  README_hardware_sim.md  package.xml  readme.md
MarvinDocker/ros2_ws/src/marvin_teleop/.git.bak.20260416_104155/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
MarvinDocker/ros2_ws/src/marvin_teleop/.git.bak.20260416_104155/logs/: HEAD
MarvinDocker/ros2_ws/src/marvin_teleop/.git.bak.20260416_104155/logs/refs/heads/: tool-com-forward  wbd
MarvinDocker/ros2_ws/src/marvin_teleop/.git.bak.20260416_104155/logs/refs/remotes/origin/: main  wbd
MarvinDocker/ros2_ws/src/marvin_teleop/.git.bak.20260416_104155/objects/pack/: pack-f9f110f12abfd21d5473a25bb782bd924342aabb.idx  pack-f9f110f12abfd21d5473a25bb782bd924342aabb.pack
MarvinDocker/ros2_ws/src/marvin_teleop/.git.bak.20260416_104155/refs/heads/: tool-com-forward  wbd
MarvinDocker/ros2_ws/src/marvin_teleop/.git.bak.20260416_104155/refs/remotes/origin/: main
MarvinDocker/ros2_ws/src/marvin_teleop/config/: marvin_CCS_m3.urdf  marvin_CCS_m6.urdf  robot_param_m3.yaml  robot_param_m6.yaml
MarvinDocker/ros2_ws/src/marvin_teleop/include/marvin_teleop/: MarvinSDK.h  marvin_robot.h
MarvinDocker/ros2_ws/src/marvin_teleop/launch/: hardware_sim.launch.py  teleop_debug.launch.py  teleop_m3.launch.py  teleop_m6.launch.py
MarvinDocker/ros2_ws/src/marvin_teleop/marvin_teleop/: 6dof_maker.py  IK_viewer.py  controller_udp.py  controller_udp_new.py  hardware_sim.py  initial_position_helper.py  rot_limit.py  vla_command.py
MarvinDocker/ros2_ws/src/marvin_teleop/src/: IK_node.cpp
MarvinDocker/ros2_ws/src/marvin_teleop/src/fx_sdk/: FXMath.h  FXMatrix.cpp  FXMatrix.h  FXRobotDef.h  FxRobot.cpp  nspedit2.cpp  nspedit2.sln  nspedit2.vcxproj  nspedit2.vcxproj.filters
MarvinDocker/ros2_ws/src/marvin_teleop/src/kinematicsSDK/: AxisPln.cpp  AxisPln.h  FXDG.cpp  FXDT.c  FXMatrix.h  FXSpln.h  FxRobot.h  O3Polynorm.cpp
MarvinDocker/scripts/: ServiceCall.sh  StartAll.sh  build_ros.sh  call_reset_arms.sh
Sam3Docker/: Dockerfile  Dockerfile.jetson  Start.sh  build.sh  config.yaml  install  run.sh
Sam3Docker/RequestFormat/: input.schema.json  output.schema.json
Sam3Docker/sam3/: .gitignore  __init__.py  pyproject.toml
Sam3Docker/sam3-main/: test.py
SiglipDocker/: Dockerfile  build.sh  config.yaml  run.sh  tips.sh
SiglipDocker/RequestFormat/: input.schema.json  output.schema.json
YOLODocker/: Dockerfile  build.sh  config.yaml  requirements.txt  run.sh
configs/: config.py  obj_meta.json
datasets/: datasets_infer.py  datasets_omni6dpose.py
networks/: posenet.py  posenet_agent.py  scalenet.py
networks/gf_algorithms/: losses.py  samplers.py  scorenet.py  sde.py
networks/pts_encoder/: pointnet2.py
runners/: fds_infer.py  fds_infer_ros.py  infer.py  rosbox.py  trainer.py  yomni_infer.py  yomni_inference_helper.py  yomni_ui.py
scripts/: infer_fds.sh  infer_ros.sh  infer_yolo.sh  train_scale_owndata_test.sh  train_score_owndata_test.sh
translator_1/: run_one_remake_0120.py
translator_1/install/: local_setup.sh  setup.sh
translator_1/log/: latest_build
translator_1/src/fake_interface_pkg/: CMakeLists.txt  setup.cfg
translator_1/src/fake_interface_pkg/msg/: KeypointPose.msg  ObjectPose.msg
utils/: misc.py  tracking_utils.py  utils.py
(+295 files in other folders)
