<?xml version="1.0"?>
<package format="3">
  <name>marvin_description</name>
  <version>0.0.1</version>
  <description>Test robot with DAE mesh</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf_launch</depend>

  <test_depend>ament_lint_auto</test_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
